# s2-analyzer

./: .gitignore  .gitmodules  README.md  docker-compose.yml  package-lock.json  package.json  sonar-project.properties  test.txt
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  database.db  dev-requirements.in  dev-requirements.txt  docker-compose.yml  docker_run.sh  pylintrc  pyproject.toml  requirements.in  requirements.txt  run.sh
backend/ci/: install_dependencies.sh  test_unit.sh  typecheck.sh  update_dependencies.sh
backend/database/: database.db
backend/deployment/: config.yaml
backend/device_simulation/: Dockerfile  config.yaml  model_connection.py  run_simulation.py
backend/device_simulation/cem_model_simple/: cem_model_simple.py  common.py  device_model.py  frbc_strategy.py  model.py
backend/mocks/: cem_frbc_valid.py  model.py  model_connection.py  rm_frbc_invalid.py  rm_frbc_valid.py
backend/mocks/cem_model_simple/: cem_model_simple.py  common.py  device_model.py  frbc_strategy.py
backend/s2_analyzer_backend/: app_logging.py  async_application.py  async_selectable.py  builders.py  cem_model_simple.py  common.py  config.py  connection.py  database.py  envelope.py  globals.py  history.py  history_filter.py  main.py  message_processor.py  model.py  origin_type.py  reception_status_awaiter.py  rest_api.py  router.py  s2_analyzer_backend.py  s2_cem_server.py  s2_json_schema_validator.py  test.py
backend/s2_analyzer_backend/cem_model_simple/: cem_model_simple.py  common.py  device_model.py  frbc_strategy.py  (+2 more)
(+203 files in other folders)
