[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclass-wizard>=0.35.0",
    "fastapi[standard]>=0.115.12",
    "s2-python>=0.5.0",
    "sqlmodel>=0.0.24",
    "websockets>=13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pylink>=0.3.3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-coverage>=0.0",
    "pytest-timer>=1.0.0",
]
